# AlphaLLVM

./: CMakeLists.txt  README.md
src/: Dockerfile  Makefile  alpha-run.sh  alpha_runtime.c  ast.h  codegen.cpp  codegen.h  lexer.l  main.cpp  parser.y  semantic.cpp  semantic.h  symtable.cpp  symtable.h
tests/: linked_list.alpha  mathcomp.alpha  mergesort.alpha  oop.alpha  test.alpha
